--- a/IDscan.html
+++ b/IDscan.html
@@ -163,54 +163,43 @@
     function startEyeTracking(videoId, canvasId) {
       const video = document.getElementById(videoId);
       const canvas = document.getElementById(canvasId);
-      const ctx = canvas.getContext('2d');
+      const displaySize = { width: video.width, height: video.height };
+      faceapi.matchDimensions(canvas, displaySize);
 
       setInterval(async () => {
         if (video.readyState < 2) return;
         const detections = await faceapi.detectAllFaces(video, new faceapi.TinyFaceDetectorOptions())
           .withFaceLandmarks(true);
 
+        const resized = faceapi.resizeResults(detections, displaySize);
+        const ctx = canvas.getContext('2d');
         ctx.clearRect(0, 0, canvas.width, canvas.height);
-        canvas.width = video.videoWidth;
-        canvas.height = video.videoHeight;
 
-        detections.forEach(det => {
+        resized.forEach(det => {
           const landmarks = det.landmarks;
           const leftEye = landmarks.getLeftEye();
           const rightEye = landmarks.getRightEye();
 
-          // Draw red dots
           ctx.fillStyle = "red";
-          [...leftEye, ...rightEye].forEach(pt => {
-            ctx.beginPath();
-            ctx.arc(pt.x, pt.y, 3, 0, 2 * Math.PI);
-            ctx.fill();
-          });
-
-          // Enhance each eye region
-          [leftEye, rightEye].forEach(eyePoints => {
-            if (!eyePoints.length) return;
-            enhanceEyeSection(video, ctx, eyePoints);
-          });
+          leftEye.forEach(pt => ctx.fillRect(pt.x-2, pt.y-2, 4, 4));
+          rightEye.forEach(pt => ctx.fillRect(pt.x-2, pt.y-2, 4, 4));
         });
-      }, 150);
+      }, 100);
     }
 
-    function enhanceEyeSection(video, ctx, eyePoints) {
-      const xs = eyePoints.map(p => p.x);
-      const ys = eyePoints.map(p => p.y);
-      const x = Math.min(...xs);
-      const y = Math.min(...ys);
-      const w = Math.max(...xs) - x;
-      const h = Math.max(...ys) - y;
+    // Chart.js setup
+    function makeChart(ctx, label, color) {
+      return new Chart(ctx, {
+        type: 'line',
+        data: { labels: [], datasets: [{ label, data: [], borderColor: color, fill: false }] },
+        options: { animation: false, scales: { x: { display: false }, y: { display: true } } }
+      });
+    }
+    const ppgFront = makeChart(document.getElementById('ppgFront').getContext('2d'), 'PPG Front', '#00e5ff');
+    const spo2FrontChart = makeChart(document.getElementById('spo2FrontChart').getContext('2d'), 'SpO₂ Front', '#ff4081');
+    const ppgRear = makeChart(document.getElementById('ppgRear').getContext('2d'), 'PPG Rear', '#00e5ff');
+    const spo2RearChart = makeChart(document.getElementById('spo2RearChart').getContext('2d'), 'SpO₂ Rear', '#ff4081');
 
-      // Create offscreen canvas for eye crop
-      const eyeCanvas = document.createElement('canvas');
-      eyeCanvas.width = w * 2;
-      eyeCanvas.height = h * 2;
-      const eyeCtx = eyeCanvas.getContext('2d');
-      eyeCtx.filter = "contrast(150%) saturate(200%)";
-      eyeCtx.drawImage(video, x, y, w, h, 0, 0, w * 2, h * 2);
-
-      // Draw enhanced eye inset above the eye
-      ctx.drawImage(eyeCanvas, x, y - h - 30, w
+    // Simulated data update
+    setInterval(() => {
+      const hr =
