--- a/IDscan.html
+++ b/IDscan.html
@@ -122,4 +122,4 @@ let charts={};
 function makeGradient(ctx,colors){const g=ctx.createLinearGradient(0,0,0,ctx.canvas.height);colors.forEach(([s,c])=>g.addColorStop(s,c));return g;}
 function createChart(canvasId,colors){
   const ctx=document.getElementById(canvasId).getContext("2d");
-  return new Chart(ctx,{type:"line",data:{labels:[],datasets:[{data:[],borderColor:makeGradient(ctx,colors),backgroundColor:"rgba(0,0,0,0.2)",fill:true,borderWidth:2.2,tension:0.35
+  return new Chart(ctx,{type:"line",data:{labels:[],datasets:[{data:[],borderColor:makeGradient(ctx,colors),backgroundColor:"rgba(0,0,0,0.2)",fill:true,borderWidth:2.2,tension:0.
